/*
 * Copyright (c) 2026 大前良介 (OHMAE Ryosuke)
 *
 * This software is released under the MIT License.
 * http://opensource.org/licenses/MIT
 */

package net.mm2d.color.chooser.compose

/**
 * Enum class for color chooser.
 */
enum class Chooser {
    /** Choose from Material2 Palette */
    M2,

    /** Choose by HSV */
    HSV,

    /** Choose by RGB */
    RGB,

    /** Choose from Material3 Palette */
    M3,
}
