...
}

private fun Color.toHex(
    withAlpha: Boolean,
): String =
    if (withAlpha) {
        "#%08X".format(toArgb())
    } else {
        "#%06X".format(toArgb() and 0xFFFFFF)
    }

@PreviewEnvironment
@Composable
private fun PreviewColorPreview() {
    MaterialTheme(
...
