...
        ThemeMode.SYSTEM -> isSystemInDarkTheme()
        ThemeMode.LIGHT -> false
        ThemeMode.DARK -> true
    }

    SampleTheme(darkTheme = isDark) {
        when (val screen = currentScreen) {
            is Screen.Main -> {
                MainScreen(
                    currentColor = currentColor,
                    currentThemeMode = themeMode,
                    onColorChanged = { colorInt = it.toArgb() },
                    onThemeModeChanged = { themeMode = it },
...
